# spamcontest

./: Cargo.toml
.github/workflows/: rust.yml
src/: lib.rs
