[package]
name = "spamcontest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10.0"
time = "0.3.17"
itertools = "0.10"
tokio = {version = "1.20", features = ["rt-multi-thread", "signal"]}
dashmap = "5.3.4"

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]