[package]
name = "spamcontest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.11.3"
time = "0.3.36"
itertools = "0.13"
tokio = {version = "1.37", features = ["rt-multi-thread", "signal"]}
dashmap = "5.5.3"

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]
